gcc/testsuite/algol68/compile/error-loop-1.a68
from i from 1 to 10 do skip od { dg-error "" }
